Change path to CT init pid directory
Previous commit introduced a directory to store CT init pid needed for
CRIU to checkpoint mainstream containers. The path used was /vz/state
and it's not really a good choice.

Let's use /var/lib/vzctl/vepid instead (similar to
/var/lib/vzctl/veip and /var/lib/vzctl/vzreboot).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/paths.am
+++ b/paths.am
@@ -41,3 +41,4 @@ modulesdir  = $(pkglibexecdir)/modules
 
 veipdumpdir = $(localstatedir)/lib/vzctl/veip
 vzrebootdir = $(localstatedir)/lib/vzctl/vzreboot
+vepiddir    = $(localstatedir)/lib/vzctl/vepid
