Add vepid dir to make install and vzctl.spec
This is an addition to previous two commits.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,6 +43,7 @@ install-data-local:
 	$(mkinstalldirs) -m 700 $(DESTDIR)$(vzrootdir)
 	$(mkinstalldirs) $(DESTDIR)$(veipdumpdir)
 	$(mkinstalldirs) $(DESTDIR)$(vzrebootdir)
+	$(mkinstalldirs) $(DESTDIR)$(vepiddir)
 	$(mkinstalldirs) $(DESTDIR)$(modulesdir)
 
 DISTRO_TARGETS = \
