--- a/scripts/vps-cpt.in
+++ b/scripts/vps-cpt.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2012, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2013, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,15 +16,15 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-# Checkpoint a container using the criu.
-# Useful for running in non-OpenVZ kernels.
+# Checkpoint a container using CRIU (http://criu.org).
+# Useful with recent upstream (i.e. non-OpenVZ) kernels.
+# Requires criu to be installed.
 #
 # Parameters are passed in environment variables.
 # Required parameters:
-#   VE_ROOT	- container root directory
-#   VE_DUMP_DIR - directory for saving dump files 
-#   VE_PID	- PID of the init process
-#
+#   VE_ROOT     - container root directory
+#   VE_DUMP_DIR - directory for saving dump files
+#   VE_PID      - PID of CT init process
 
 exec 1>&2
 . @SCRIPTDIR@/vps-functions
@@ -47,7 +47,7 @@ if [ $? -ne 0 ]; then
 	[ -d $VE_DUMP_DIR.fail ] && rm -rf $VE_DUMP_DIR.fail
 	mv -f $VE_DUMP_DIR $VE_DUMP_DIR.fail
 	echo Failed to checkpoint the Container
-	echo All dump files and logs were saved in $VE_DUMP_DIR.fail
+	echo All dump files and logs were saved to $VE_DUMP_DIR.fail
 	exit 1
 else
 	echo Checkpointing finished successfully
