--- a/scripts/vps-rst.in
+++ b/scripts/vps-rst.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2012, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2013, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,15 +16,15 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-# Resume a container using the criu.
-# Useful for running in non-OpenVZ kernels.
+# Resume a container using CRIU (http://criu.org).
+# Useful with recent upstream (i.e. non-OpenVZ) kernels.
+# Requires criu to be installed.
 #
 # Parameters are passed in environment variables.
 # Required parameters:
-#   VE_ROOT	  - container root directory
-#   VE_DUMP_DIR	  - directory for saving dump files
-#   VE_STATE_FILE - file, where PID of the init process will be saved
-#
+#   VE_ROOT       - container root directory
+#   VE_DUMP_DIR   - directory for saving dump files
+#   VE_STATE_FILE - file to write CT init PID to
 
 exec 1>&2
 . @SCRIPTDIR@/vps-functions
