configure.ac: set _GNU_SOURCE for older autoconf
Macro AC_USE_SYSTEM_EXTENSIONS is adding _GNU_SOURCE to CFLAGS
(actually DEFS but it end up in compilation flags) so we don't have to
do it in every file using GNU extensions.

The problem is this macro is only available since autoconf 2.60,
while RHEL5 have autoconf 2.59. Note that usually this is not an issue
since distribution tarball already contains stuff generated by autoconf.
This only hits then someone tries to build vzctl from git checkout.

The fix is to use older AC_GNU_SOURCE macro in case
AC_USE_SYSTEM_EXTENSIONS is not available.

While at it, remove #define _GNU_SOURCE from the source files since
those are no longer needed.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-#  Copyright (C) 2000-2012, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2000-2013, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -52,8 +52,12 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 # Disable build of static libraries by default.
 AC_DISABLE_STATIC
 
+# If AC_USE_SYSTEM_EXTENSIONS is available (autoconf >= 2.60),
+# use it. Otherwise, use old AC_GNU_SOURCE
+m4_ifdef([AC_USE_SYSTEM_EXTENSIONS],
+	 [AC_USE_SYSTEM_EXTENSIONS], [AC_GNU_SOURCE])
+
 # Checks for programs.
-m4_ifdef([AC_USE_SYSTEM_EXTENSIONS], [AC_USE_SYSTEM_EXTENSIONS])
 AC_PROG_CC
 AC_PROG_LIBTOOL
 AC_PROG_INSTALL
