vzctl: synchronize CRIU with vzctl (v2)
vzctl provides two descriptors signalfd and waitfd, it's used for apply
host-side configuration after creating environment.
A signal is send to signalfd after creating environment and an answer is
recieved from waitfd.

v2: fix comments from Kir

Signed-off-by: Andrey Vagin <avagin@openvz.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -29,7 +29,8 @@ script_SCRIPTS = \
 	vzevent-reboot \
 	vps-pci	\
 	vps-cpt \
-	vps-rst
+	vps-rst \
+	vps-rst-env
 
 EXTRA_DIST = \
 	$(script_SCRIPTS:%=%.in)
