vz.conf: set default OS template to centos-6-x86
1. CentOS 5 is old, it makes sense to make CentOS 6 a default.

2. Even on an x86_64 host it makes much sense to run 32-bit container
so make it a default.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/vz.conf.in
+++ b/etc/vz.conf.in
@@ -35,7 +35,7 @@ TEMPLATE=@VZDIR@/template
 VE_ROOT=@VZDIR@/root/$VEID
 VE_PRIVATE=@VZDIR@/private/$VEID
 CONFIGFILE="basic" # Use vswap-256m on RHEL6 kernel
-DEF_OSTEMPLATE="centos-5"
+DEF_OSTEMPLATE="centos-6-x86"
 ## Filesystem layout for new CTs: either simfs (default) or ploop
 #VE_LAYOUT=ploop
 
