vzmigrate: check ipv6 module on dest
In case of live migration, if ipv6 module is loaded locally,
it should also be loaded on the destination node.

https://bugzilla.openvz.org/2555

Reported-by: Jim Faulkner <james.faulkner@yale.edu>
Reported-by: Vasily Averin <vvs@openvz.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -513,6 +513,13 @@ if [ $online -eq 1 ]; then
 	else
 		check_cpt_props
 	fi
+	# Check ipv6 kernel module
+	if test -d /sys/module/ipv6; then
+		if ! $SSH "root@$host" test -d /sys/module/ipv6; then
+			log 0 "Module ipv6 is not loaded on the destination node"
+			exit $MIG_ERR_OVZ_NOT_RUNNING
+		fi
+	fi
 fi
 
 log 2 "Loading $vzconf and $vpsconf files"
