Introduce vz-postinstall script
In order to make installation easier, let's introduce the script
which will set up /etc/sysctl.conf and /etc/sysconfig/selinux.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -30,7 +30,8 @@ script_SCRIPTS = \
 	vps-pci	\
 	vps-cpt \
 	vps-rst \
-	vps-rst-env
+	vps-rst-env \
+	vz-postinstall
 
 EXTRA_DIST = \
 	$(script_SCRIPTS:%=%.in)
