scripts/vz-postinstall.in: silent sysctl -p
There may be some parameters in /etc/sysctl.conf which are not
set by this script and are not applicable to the current system.
An example from CentOS 6 system is this one:

	error: "net.bridge.bridge-nf-call-ip6tables" is an unknown key
	error: "net.bridge.bridge-nf-call-iptables" is an unknown key
	error: "net.bridge.bridge-nf-call-arptables" is an unknown key

Let's suppress these errors from sysctl since they are not relevant.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vz-postinstall.in
+++ b/scripts/vz-postinstall.in
@@ -61,7 +61,7 @@ tune_sysctl()
 	change_param $file kernel.sysrq				1
 	change_param $file net.ipv4.conf.default.send_redirects	1
 	change_param $file net.ipv4.conf.all.send_redirects	0
-	sysctl -q -p
+	sysctl -q -p 2>/dev/null
 }
 
 # Disables SELinux
