scripts/vps-download: rename to /usr/sbin/vztmpl-dl
This script, while used by vzctl create and bash-completion script,
can also be used directly by users. So let's move it to /usr/sbin
and rename to vztmpl-dl.

Man page will follow.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -155,7 +155,7 @@ _vzctl()
 				local vztmpl=`grep ^TEMPLATE @PKGCONFDIR@/vz.conf | cut -d "=" -f 2`
 				COMPREPLY=( $( compgen -W "$(command ls $vztmpl/cache/*.tar{,.gz,.xz,.bz2} 2>/dev/null |
 						    sed -e "s#^$vztmpl/cache/##" -e 's#\.tar\.*[gbxz2]*$##';
-						    @SCRIPTDIR@/vps-download --list)" -- $cur ) )
+						    @SBINDIR@/vztmpl-dl --list)" -- $cur ) )
 
 				;;
 			--onboot|--disabled|--diskquota)
