--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -160,7 +160,7 @@ start_ve() {
 			fi
 		fi
 		rm -f $VZREBOOTDIR/$veid
-		msg=$(${VZCTL} start ${veid} 2>&1)
+		msg=$(${VZCTL} start ${veid} --skip-fsck 2>&1)
 		eend $? "${msg}"
 	done
 
