Add --stop-timeout/STOP_TIMEOUT parameter
vz.conf, ctid.conf: add STOP_TIMEOUT parameter
vzctl set: add --stop-timeout option
vzctl stop: use configured timeout
man/*: describe it, explain timeout in vzctl stop
bash-completion: add

https://bugzilla.openvz.org/2621

Reported-by: Stefan Schlesinger <sts@ono.at>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -89,7 +89,7 @@ _vzctl()
 		--diskspace --diskinodes --quotatime --quotaugidlimit \
 		--capability --devnodes --devices --applyconfig \
 		--name --ioprio --setmode --meminfo --bootorder --features \
-		--reset_ub"
+		--reset_ub --stop-timeout"
 	local vzctl_start_opts="--wait --force --skip-fsck"
 	local vzctl_stop_opts="--fast --skip-umount"
 	local vzctl_restart_opts="$vzctl_start_opts $vzctl_stop_opts"
