--- a/man/vz.conf.5.in
+++ b/man/vz.conf.5.in
@@ -123,6 +123,9 @@ numeric CT ID.
 .IP \fBIPTABLES\fR="\fImodule\ module\ ...\fR"
 List of iptables modules to be enabled for containers, corresponds
 to \fB--iptables\fR option.
+.IP \fBSTOP_TIMEOUT\fR="\fInumber\fR"
+Time to wait for a container to shut down on \fBvzctl stop\fR,
+before forcibly killing it, in seconds. Hardcoded to 120 if not set.
 .PP
 Most of the other parameters that appear in per-container configuration files
 \fBctid.conf\fR(5) can be also set here. Still, it is recommended to keep
