--- a/scripts/vps-netns_dev_add.in
+++ b/scripts/vps-netns_dev_add.in
@@ -33,6 +33,7 @@
 #   HMAC        - host devices's MAC address
 #   VMAC        - container device's MAC address
 #   BRIDGE      - a bridge name to add HNAME to
+#   SKIP_CREATE - if set, device pair creation is skipped
 
 . @PKGCONFDIR@/vz.conf
 . @SCRIPTDIR@/vps-functions
@@ -40,14 +41,11 @@
 vzcheckvar VEID
 vzcheckvar VNAME
 vzcheckvar HNAME
-vzcheckvar ACTION
 
 if [ "x$HNAME" = "x$VNAME" ]; then
 	vzmoveif
 else
-	if [ "$ACTION" = "add" ]; then
-		vzcreatepair
-	fi
+	test -z "$SKIP_CREATE" && vzcreatepair
 	vzadjustmacs
 	vzconfbridge
 fi
