Do enable ploop fsck on start, require ploop 1.8
* vzctl.spec: require ploop 1.8

* configure.ac: check for fsck field of appropriate struct

* vzctl_mount_image(): uncomment fsck flag passing to ploop

Basically this enables fsck for inner ploop filesystem on mount,
as it was promised in commit 83aec22.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -164,7 +164,12 @@ AS_IF([test "x$with_ploop" = "x+ploop"],
 The ploop library headers not found or way too old. You need to either
 install recent ploop library headers (most probably ploop-devel package),
 or use ./configure --without-ploop] ) ]
-	) ]
+	)
+	AC_CHECK_MEMBER([struct ploop_mount_param.fsck], ,
+		[ AC_MSG_ERROR( [
+The ploop library headers are too old. You need ploop 1.8 or later] ) ],
+		[[#include "ploop/libploop.h"]])
+	]
 )
 
 AS_IF([test "x$with_ploop" = "x+ploop"],
