scripts/vps-rst: make VE_VETH_DEVS optional
It is empty in case CT does not have any veth devices.

https://bugzilla.openvz.org/show_bug.cgi?id=2659

[kir@openvz.org: modify var description accordingly]

Reported-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>
Signed-off-by: Andrey Vagin <avagin@openvz.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-rst.in
+++ b/scripts/vps-rst.in
@@ -25,6 +25,7 @@
 #   VE_ROOT       - container root directory
 #   VE_DUMP_DIR   - directory for saving dump files
 #   VE_STATE_FILE - file to write CT init PID to
+# Optional parameters:
 #   VE_VETH_DEVS  - pair of veth names (CT=HW\n)
 
 exec 1>&2
@@ -33,7 +34,6 @@ exec 1>&2
 vzcheckvar VE_ROOT
 vzcheckvar VE_STATE_FILE
 vzcheckvar VE_DUMP_DIR
-vzcheckvar VE_VETH_DEVS
 
 veth_args=""
 for dev in $VE_VETH_DEVS; do
