--- a/man/vzmigrate.8.in
+++ b/man/vzmigrate.8.in
@@ -16,6 +16,8 @@ vzmigrate \- migrate a container between two OpenVZ servers
 .OP -t\fR|\fB--times
 .OP -v
 .I destination_address CTID
+.SY vzmigrate
+.BR -h | --help | --usage | -?
 .YS
 .SH DESCRIPTION
 This utility is used to migrate a container from one (source) Hardware Node (HN)
@@ -89,6 +91,10 @@ with \fB--live\fR.
 Verbose mode. Causes \fBvzmigrate\fP to print debugging messages about
 its progress. Note that \fB-v\fR automatically implies \fB-t\fR.
 Multiple \fB-v\fR options increase the verbosity.
+
+.TP
+.BR -h | --help | --usage | -?
+Print usage info and exit.
 
 .SH EXAMPLES
 Migration of CT 101 to \fB192.168.1.130\fR with downtime:
