Implement nameserver/searchdomain inheritance
Now, if NAMESERVER/--nameserver and/or SEARCHDOMAIN/--searchdomain value
is "inherit", the corresponding setting is taken from host system's
/etc/resolv.conf. That way, a user don't have to do extra configuration
step required for DNS to work inside a container.

Note that per-CT parameters are inherited from the global
/etc/vz/vz.conf, so we set NAMESERVER=inherit in vz.conf and therefore
all the newly created containers, plus those not having explicit
NAMESERVER value in their own ctid.conf files will receive host
system's nameservers.

Modify man pages accordingly.

https://bugzilla.openvz.org/2301

Reported-by: openvz@mailinator.com
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/ctid.conf.5.in
+++ b/man/ctid.conf.5.in
@@ -116,10 +116,13 @@ Corresponds to the \fB--ipadd\fR option.
 Corresponds to the \fB--hostname\fR option.
 .IP \fBNAMESERVER\fR="\fIip\fR\ [\fIip\fR\ ...]"
 Corresponds to the \fB--nameserver\fR option. Several name server addresses
-are divided by spaces.
+are divided by spaces. If set to \fBinherit\fR, values from host system's
+\fB/etc/resolv.conf\fR are used.
 .IP \fBSEARCHDOMAIN\fR="\fIdomain\fR\ [\fIdomain\fR\ ...]"
 Corresponds to the \fB--searchdomain\fR option. Several search domains
-are divided by spaces.
+are divided by spaces. If set to \fBinherit\fR, values from host system's
+\fB/etc/resolv.conf\fR are used.
+
 .SH SEE ALSO
 .BR vzctl (8),
 .BR vzcfgvalidate (8),
