scripts: use VPSCONFDIR instead of PKGCONFDIR/conf
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -37,7 +37,7 @@ snapshot=0
 check_only=0
 ignore_cpu=0
 ignore_ipv6=0
-confdir="@PKGCONFDIR@/conf"
+confdir="@VPSCONFDIR@"
 vzconf="@PKGCONFDIR@/vz.conf"
 tmpdir="/var/tmp"
 act_scripts=
