--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -41,7 +41,7 @@
 . @SCRIPTDIR@/initd-functions
 
 VZQUOTA=@SBINDIR@/vzquota
-CONFIG_DIR=@PKGCONFDIR@/conf
+CONFIG_DIR=@VPSCONFDIR@
 VZREBOOTDIR=@VZREBOOTDIR@
 LOCKFILE=$VARLOCK/vz_lock
 SUBSYS_VZ=$VARLOCK/vz
