--- a/bin/vznetaddbr.in
+++ b/bin/vznetaddbr.in
@@ -2,7 +2,7 @@
 #
 # Add virtual network interfaces (veth's) in a container to a bridge on CT0
 
-CONFIGFILE=@PKGCONFDIR@/conf/$VEID.conf
+CONFIGFILE=@VPSCONFDIR@/$VEID.conf
 . $CONFIGFILE
 
 NETIFLIST=$(printf %s "$NETIF" |tr ';' '\n')
