--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -734,7 +734,7 @@ if [ "$snapshot" -eq 1 ]; then
 fi
 
 log 1 "Syncing private"
-$RSYNC $RSYNC1_OPTIONS "$VE_PRIVATE" "root@$host:${VE_PRIVATE_REMOTE%/*}"
+$RSYNC $RSYNC1_OPTIONS "$VE_PRIVATE/" "root@$host:$VE_PRIVATE_REMOTE/"
 RET=$?
 # Ignore rsync error 24 "Partial transfer due to vanished source files"
 if [ $RET != 24 ] && [ $RET != 0 ]; then
@@ -821,7 +821,7 @@ fi
 time_rsync2=$(date +%s.%N)
 if [ "$state" = "running" -a "$PLOOP" != "yes" ]; then
 	log 2 "Syncing private (2nd pass)"
-	if ! $RSYNC "$VE_PRIVATE" "root@$host:${VE_PRIVATE_REMOTE%/*}"; then
+	if ! $RSYNC "$VE_PRIVATE/" "root@$host:$VE_PRIVATE_REMOTE/"; then
 		log 0 "Failed to sync container private areas"
 		undo_source_stage
 		exit $MIG_ERR_COPY
