--- a/etc/download.conf
+++ b/etc/download.conf
@@ -1,11 +1,13 @@
 # Settings for vztmpl-dl script. It is not required to explicitly set
 # anything here since there are sane defaults hardcoded into the script.
 
-# Uncomment to disable automatic template update
+# Uncomment to disable automatic template update (default is "yes").
 #UPDATE_TEMPLATE="no"
 
-# Uncomment to disable template GPG check
-#CHECK_TEMPLATE_SIG="no"
+# Uncomment to enable template GPG check (default is "no").
+# To import the OpenVZ public key, see
+# http://wiki.openvz.org/Package_signatures#Importing_the_public_key
+#CHECK_TEMPLATE_SIG="yes"
 
 # Uncomment and set to location of your favorite mirror
 #TMPL_REPO_PREFIX="http://download.openvz.org/template/precreated"
